--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -22,9 +22,9 @@ Service:
               ParameterValueMapping:
                 cn-hangzhou:
                   Parameters:
-                    VpcId: vpc-bp13gvcs4sb17xh27qxcu
-                    ZoneId: cn-hangzhou-j
-                    VSwitchId: vsw-bp123chgit0937hsxvx44
+                    VpcId: vpc-bp11a4xr7tjtzbiwj1roj
+                    ZoneId: cn-hangzhou-i
+                    VSwitchId: vsw-bp1d09optuy6xy4efswzn
       FileArtifactRelation:
         '{{ computenest::file::myapp }}':
           ArtifactId: ${Artifact.Artifact_1.ArtifactId}
