--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -166,7 +166,11 @@ Resources:
             #!/bin/sh
             wget '{{ computenest::file::myapp }}'
             # RunCommand为用户指定的运行命令
+            yum install -y java
+            mkdir -p /home/admin/application
+            cd /home/admin/application
             tar xvf package.tgz
+            cp package.tgz /home/admin/application
             /bin/bash deploy.sh start
 
             ARGUS_VERSION=3.5.7 /bin/bash -c "$(curl -sS https://cms-agent-${RegionId}.oss-${RegionId}-internal.aliyuncs.com/Argus/agent_install_ecs-1.7.sh)" >> /root/install_cms_agent.log 2>&1
