--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -3,17 +3,33 @@ Service:
   DeployType: ros
   DeployMetadata:
     SupplierDeployMetadata:
+      RoleName: ComputeNestDeploy
+      UserType: Aliyun
+      SupplierTemplateConfigs:
+        - Name: Template
+          Url: 'ros_templates/template.yaml'
+          PredefinedParameters: []
+          HiddenParameterKeys:
+            - VpcId
+            - VSwitchId
+            - ZoneId
+          ParameterMappings:
+            - ParameterKey: RegionId
+              ParameterMappingKeys:
+                - VpcId
+                - ZoneId
+                - VSwitchId
+              ParameterValueMapping:
+                cn-hangzhou:
+                  Parameters:
+                    VpcId: vpc-bp11a4xr7tjtzbiwj1roj
+                    ZoneId: cn-hangzhou-i
+                    VSwitchId: vsw-bp1d09optuy6xy4efswzn
       FileArtifactRelation:
         '{{ computenest::file::myapp }}':
           ArtifactId: ${Artifact.Artifact_1.ArtifactId}
           ArtifactVersion: ${Artifact.Artifact_1.ArtifactVersion}
-    TemplateConfigs:
-      - Name: 单机版
-        Url: 'ros_templates/template.yaml'
-        AllowedRegions:
-          - cn-beijing
-          - cn-hangzhou
-  ServiceType: private
+  ServiceType: managed
   ServiceInfo:
     Locale: zh-CN
     ShortDescription: demo
