--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -112,7 +112,8 @@ Resources:
     Properties:
       SecurityGroupName:
         Ref: ALIYUN::StackName
-      VpcId: vpc-bp11a4xr7tjtzbiwj1roj
+      VpcId:
+        Ref: VpcId
       SecurityGroupIngress:
         - PortRange: 8080/8080
           Priority: 1
@@ -129,12 +130,15 @@ Resources:
         Ref: PayPeriodUnit
       Period:
         Ref: PayPeriod
-      VpcId: vpc-bp11a4xr7tjtzbiwj1roj
-      VSwitchId: vsw-bp1d09optuy6xy4efswzn
-      ZoneId: cn-hangzhou-i
+      VpcId:
+        Ref: VpcId
+      VSwitchId:
+        Ref: VSwitchId
+      ZoneId:
+        Ref: ZoneId
       SecurityGroupId:
         Ref: SecurityGroup
-      ImageId: centos_7_9_x64_20G_alibase_20240531.vhd
+      ImageId: centos_7_9_x64_20G_alibase_20240403.vhd
       Password:
         Ref: InstancePassword
       InstanceType:
