Init computenest project.       on-behalf-of: @org aliyun-computenest@alibaba-inc.com

--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -25,4 +25,4 @@ Artifact:
     ArtifactName: JJGGu_QuickstartInstallPackage
     ArtifactProperty:
       RegionId: cn-hangzhou
-      Url: 'resources/artifact_resources/file/JJGGu_QuickstartInstallPackage.tar.gz'
+      Url: 'resources/artifact_resources/file/package.tgz'
